@@ -1,13 +1,15 @@
 package com.br.aerotool.application.useCases.user;
 
+import com.br.aerotool.domain.entities.user.Role;
 import com.br.aerotool.domain.entities.user.User;
 import com.br.aerotool.domain.repositories.IUserRepository;
-import com.br.aerotool.incoming.rest.model.user.request.UserFilterRequest;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+
+import static java.util.Map.entry;
 
 @Service
 public class ReadUser {
@@ -29,8 +31,16 @@ public class ReadUser {
         if (size <= 0) throw new IllegalArgumentException("Size must be greater than 0");
 
         int offset = page * size;
-        String filterRole = role != null && !role.isBlank() ? role.toUpperCase() : null;
+        Integer roleId = null;
+        if(role != null){
+            if(!role.trim().isEmpty()){
+                roleId = Role.idFromName(role);
+            }
+        }
+        return userRepository.findAll(roleId, offset, size);
+    }
 
-        return userRepository.findAll(new UserFilterRequest(filterRole, page, size));
+    public List<User> findAll(){
+        return userRepository.findAll();
     }
 }
